# django_url_shortener

./: README.md  requirements.txt
url_short/: setup.cfg
url_short/django-url-short/: MANIFEST.in
url_short/django-url-short/url/: apps.py  models.py  views.py
url_short/django-url-short/url/migrations/: 0001_initial.py
url_short/url/: models.py
url_short/url_short/: admin.py  models.py  settings.py  urls.py  views.py
url_short/url_short/migrations/: 0001_initial.py  0002_alter_urldata_url.py  0003_alter_urldata_url.py
url_short/url_short/templates/: index.html
