[metadata]
name = url-short
version = 0.1
description = A Django app to shorten urls
long_description = file: README.rst
url = https://github.com/Ecotrust/django_url_shortener/
author = Ecotrust
author_email = ksdev@ecotrust.org
license = MIT License  
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 4.2  # Replace "X.Y" as appropriate
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.8
install_requires =
    Django >= 3.2.12  # Replace "X.Y" as appropriate